- fixed a bug in option "-cell" where option was skipped when requiring zero length for xy, yz, or xz component.
- fixed a bug in option "-orthogonal-cell" where the new number of atoms was not always correctly estimated, leading to a segmentation fault.
- fixed a bug where the position was not always computed correctly when using an operation with "box", e.g. when introducing dislocations. Thanks to Samaneh Nasiri, Friedrich-Alexander-University Erlangen-Nürnberg, Germany, for pointing out this bug.
- fixed a bug in EXPREVAL where expressions containing a factorial preceded by a parenthesis would cause a segmentation fault.
- script "install.sh" now proposes to compile Atomsk if binary does not exist in current directory.


Beta 0.11.2 (04 Nov. 2021)
--------------------------
- fixed a bug in neighbor search.
- in option "-dislocation", fixed a bug where displacements would be incorrect when the loop was not normal to Z and the Burgers vector was along Z. Thanks to Marion Borde and Jonathan Amodeo, MATEIS, University of Lyon 1, France, for pointing out this bug.
- in mode "--rdf", fixed bugs where the radial distribution functions were not computed correctly. Thanks to Valentin Delbecq, UMET, University of Lille, France, for pointing out this bug.


Beta 0.11.1 (09 Sept. 2021)
---------------------------
- in mode "--one-in-all", added possibility to read configurations from VASP OUTCAR files.
- in mode "--interpolate", initial and final states are also output with index 0 and N+1 respectively.
- mode "--one-in-all" renamed "--unfold", and mode "--all-in-one" renamed "--gather". Former keywords are still recognized for backward compatibility.
- improved the determination of atom species from POTCAR file when reading VASP POSCAR, CONTCAR or OUTCAR files.
- improved determination of cell vectors when they do not exist in input file (e.g. XYZ), or user triggered option "-rebox".
- added possibility to output to standard output (stdout) by using "-" as file name.